--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Major changes in 2.12.1 are:
+* Pass all selected files to menu extensions, not only one per mimetype
+* Use much fewer file monitors
+* Fix text size on startup with non-standard default zoom size
+* Some fixes to trash handling and unmount
+* Fix some desktop icon positioning details
+* Copy thumbnails when copying files
+* Autofill connect to server dialog when possible
+* Always show deep counts in properties page
+* Fix leaks and crashes
+* Correctly escape filenames for display in progress dialog
+
 Major changes in 2.12.0 are:
 * Fix icon layout in text-beside-icons mode in some cases
 * Fix template creation on volumes other than the same as /tmp
