--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-10-03  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for 2.12.1
+
+2005-10-03  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file-operations-progress.c:
 	(nautilus_file_operations_progress_new),
 	(nautilus_file_operations_progress_new_file):
