--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-10-03  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in: 
+
+=== nautilus 2.12.1 ===
+
+2005-10-03  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for 2.12.1
 
