--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2005-10-03  Alexander Larsson  <alexl@redhat.com>
 
-	* configure.in: 
+	* configure.in:
+	Post release version bump
 
 === nautilus 2.12.1 ===
 
