--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 2005-10-03  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Bump version to 2.13.1. Further 2.12.x work is on
+	gnome-2-12 branch.
+	
+==== gnome-2-12 branched from here ===
+	
+2005-10-03  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in: 
+	Post release version bump
 
 === nautilus 2.12.1 ===
 
