--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-03 06:45+0000\n"
-"PO-Revision-Date: 2005-08-03 11:07+0300\n"
+"PO-Revision-Date: 2005-10-04 00:11+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -465,7 +465,7 @@ msgstr "Ikoonide vaikimisi suurendusaste"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:18
 msgid "Default list of columns visible in the list view"
-msgstr ""
+msgstr "Loendivaates vaikimisi nähtaval olevate veergude loend"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:19
 msgid "Default list of columns visible in the list view."
@@ -4613,11 +4613,12 @@ msgid ""
 "Choose the order of information to appear beneath icon names. More "
 "information will appear when zooming in closer."
 msgstr ""
-"Vali teabe järjekord ikooni all. Täpsem info ilmub ikoonide suurendamisel."
+"Vali ikooni all olevate andmete järjekord. Täpsemad andmed ilmuvad ikoonide "
+"suurendamisel."
 
 #: ../src/nautilus-file-management-properties.glade.h:48
 msgid "Choose the order of information to appear in the list view."
-msgstr "Vali nimekirjavaates ilmuva teabe järjekord."
+msgstr "Nimekirjavaates ilmuvate andmete järjekorra valimine."
 
 #: ../src/nautilus-file-management-properties.glade.h:49
 msgid "Count _number of items:"
@@ -4645,7 +4646,7 @@ msgstr "Veerud nimekirjas"
 
 #: ../src/nautilus-file-management-properties.glade.h:57
 msgid "Local Files Only"
-msgstr "Ainult kohalikel failidel"
+msgstr "Ainult kohalikele failidele"
 
 #: ../src/nautilus-file-management-properties.glade.h:58
 msgid "MIME type"
@@ -4669,7 +4670,7 @@ msgstr "Näidata _ainult katalooge"
 
 #: ../src/nautilus-file-management-properties.glade.h:63
 msgid "Show _thumbnails:"
-msgstr "Näita _pisipilte:"
+msgstr "_Pisipiltide näitamine:"
 
 #: ../src/nautilus-file-management-properties.glade.h:64
 msgid "Show hidden and _backup files"
@@ -4677,7 +4678,7 @@ msgstr "Peidetud- ja _varukoopiafailide näitamine"
 
 #: ../src/nautilus-file-management-properties.glade.h:65
 msgid "Show te_xt in icons:"
-msgstr "Näita ikoonidel _teksti:"
+msgstr "_Teksti näitamine ikoonidel:"
 
 #: ../src/nautilus-file-management-properties.glade.h:66
 msgid "Sort _folders before files"
@@ -4709,7 +4710,7 @@ msgstr "_Vorming:"
 
 #: ../src/nautilus-file-management-properties.glade.h:74
 msgid "_Only for files smaller than:"
-msgstr "_Ainult faile, mis on vaiksemad kui:"
+msgstr "_Ainult failidele, mis on vaiksemad kui:"
 
 #: ../src/nautilus-file-management-properties.glade.h:75
 msgid "_Run executable text files when they are clicked"
@@ -5655,7 +5656,7 @@ msgstr "_Peata"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:625
 msgid "_Reload"
-msgstr "_Lae uuesti"
+msgstr "_Laadi uuesti"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:629
@@ -5803,450 +5804,3 @@ msgstr "Võrguserverid"
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Vaata oma võrgu servereid Nautiluse failihalduris."
 
-#~ msgid ""
-#~ "Do you want to switch to manual layout and leave this item where you "
-#~ "dropped it? This will clobber the stored manual layout."
-#~ msgstr ""
-#~ "Kas muuta elementide automaatne paigutus käsitsi paigutuseks ja jätta see "
-#~ "element sinna, kuhu ta on lohistatud? See muudab praegust paigutust."
-
-#~ msgid "This folder uses automatic layout."
-#~ msgstr "See kataloog kasutab automaatset paigutust"
-
-#~ msgid ""
-#~ "Do you want to switch to manual layout and leave these items where you "
-#~ "dropped them? This will clobber the stored manual layout."
-#~ msgstr ""
-#~ "Kas muuta elementide automaatne paigutus käsitsi paigutuseks ja jätta see "
-#~ "element sinna, kuhu ta on lohistatud? See muudab praegust paigutust."
-
-#~ msgid ""
-#~ "Do you want to switch to manual layout and leave this item where you "
-#~ "dropped it?"
-#~ msgstr ""
-#~ "Kas soovid vahetada paigutuse sätteid ja jätta elemendi sinna, kuhu ta on "
-#~ "lohistatud?"
-
-#~ msgid ""
-#~ "Do you want to switch to manual layout and leave these items where you "
-#~ "dropped them?"
-#~ msgstr ""
-#~ "Kas muuta elementide automaatne paigutus käsitsi paigutuseks ja jätta see "
-#~ "element sinna, kuhu ta on lohistatud?"
-
-#~ msgid "_Browse Folders"
-#~ msgstr "_Sirvi katalooge"
-
-#~ msgid "Ma_ke Links"
-#~ msgstr "Tee _lingid"
-
-#~ msgid "Names:"
-#~ msgstr "Nimed:"
-
-#~ msgid ""
-#~ "This is probably because the emblem is a permanent one, and not one you "
-#~ "added yourself."
-#~ msgstr ""
-#~ "Tõenäoliselt on see tingitud sellest, et embleem on püsiv, ja pole sinu "
-#~ "poolt lisanud."
-
-#~ msgid "Preview Width"
-#~ msgstr "Eelvaate kõrgus"
-
-#~ msgid "Preview Height"
-#~ msgstr "Eelvaate laius"
-
-#~ msgid "Screen"
-#~ msgstr "Ekraan"
-
-#~ msgid "Disabled"
-#~ msgstr "Keelatud"
-
-#~ msgid "Name of the column"
-#~ msgstr "Veeru nimi"
-
-#~ msgid "Attribute"
-#~ msgstr "Atribuut"
-
-#~ msgid "The attribute name to display"
-#~ msgstr "Näidatav atribuudi nimetus"
-
-#~ msgid "Label"
-#~ msgstr "Silt"
-
-#~ msgid "Label to display in the column"
-#~ msgstr "Veeru silt"
-
-#~ msgid "A user-visible description of the column"
-#~ msgstr "Kasutajale nähtav veeru kirjeldus"
-
-#~ msgid "xalign"
-#~ msgstr "Horisontaalne joondamine"
-
-#~ msgid "The x-alignment of the column"
-#~ msgstr "Veerude x-joondus"
-
-#~ msgid "Name of the item"
-#~ msgstr "Kirje nimi"
-
-#~ msgid "Label to display to the user"
-#~ msgstr "Silt, mida kasutajale näidata"
-
-#~ msgid "Tip"
-#~ msgstr "Spikker"
-
-#~ msgid "Tooltip for the menu item"
-#~ msgstr "Nõuanded menüükirjetele"
-
-#~ msgid "Icon"
-#~ msgstr "Ikoon"
-
-#~ msgid "Name of the icon to display in the menu item"
-#~ msgstr "Menüüs näidatava ikooni nimi"
-
-#~ msgid "Sensitive"
-#~ msgstr "Tundlikkus"
-
-#~ msgid "Priority"
-#~ msgstr "Tähtsus"
-
-#~ msgid "Show priority text in toolbars"
-#~ msgstr "Olekuteksti näitamine tööriistaribadel"
-
-#~ msgid "Name of the page"
-#~ msgstr "Lehekülje nimi"
-
-#~ msgid "Page"
-#~ msgstr "Lehekülg"
-
-#~ msgid "editable text"
-#~ msgstr "redigeeritav tekst"
-
-#~ msgid "the editable label"
-#~ msgstr "redigeeritav silt"
-
-#~ msgid "additional text"
-#~ msgstr "lisatekst"
-
-#~ msgid "some more text"
-#~ msgstr "veel teksti"
-
-#~ msgid "highlighted for selection"
-#~ msgstr "esiletõstetud välja valimiseks"
-
-#~ msgid "whether we are highlighted for a selection"
-#~ msgstr "kas oleme väljavaliku jaoks esiletõstetud"
-
-#~ msgid "highlighted as keyboard focus"
-#~ msgstr "esiletõstetud klaviatuuri fookusena"
-
-#~ msgid "whether we are highlighted to render keyboard focus"
-#~ msgstr "kas oleme esiletõstetud osutamaks klaviatuuri fookusele"
-
-#~ msgid "highlighted for drop"
-#~ msgstr "esiletõstetud lohistamiseks"
-
-#~ msgid "whether we are highlighted for a D&D drop"
-#~ msgstr "kas me oleme esiletõstetud D&D lohistamiseks"
-
-#~ msgid "Frame Text"
-#~ msgstr "Raamtekst"
-
-#~ msgid "Draw a frame around unselected text"
-#~ msgstr "Joonista raam ümber valimata teksti"
-
-#~ msgid "Selection Box Color"
-#~ msgstr "Valikukasti värv"
-
-#~ msgid "Color of the selection box"
-#~ msgstr "Valikukasti värv"
-
-#~ msgid "Opacity of the selection box"
-#~ msgstr "Valikukasti läbipaistvus"
-
-#~ msgid "Opacity of the highlight for selected icons"
-#~ msgstr "Esile tõstetud failiikoonide läbipaistvus"
-
-#~ msgid "Light Info Color"
-#~ msgstr "Hele infovärv"
-
-#~ msgid "Color used for information text against a dark background"
-#~ msgstr "Värv, mida kasutatakse teksti tumeda taustana"
-
-#~ msgid "Dark Info Color"
-#~ msgstr "Tume infovärv"
-
-#~ msgid "Color used for information text against a light background"
-#~ msgstr "Värv, mida kasutatakse teksti heleda taustana"
-
-#~ msgid "Application"
-#~ msgstr "Rakendus"
-
-#~ msgid "Bring up a new window for every opened file"
-#~ msgstr "Ava iga uus fail uues aknas"
-
-#~ msgid ""
-#~ "If set to true, then Nautilus will bring up a new Nautilus window by "
-#~ "default whenever an item is opened."
-#~ msgstr "Kui valik on aktiivne, kuvab Nautilus iga kirje avamisel uue akna."
-
-#~ msgid "Cut _Text"
-#~ msgstr "Lõika _tekst"
-
-#~ msgid "_Copy Text"
-#~ msgstr "_Kopeeri tekst"
-
-#~ msgid "_Paste Text"
-#~ msgstr "_Aseta tekst"
-
-#~ msgid "Cu_t Files"
-#~ msgstr "_Lõika failid"
-
-#~ msgid "_Copy Files"
-#~ msgstr "_Kopeeri failid"
-
-#~ msgid "_Paste Files"
-#~ msgstr "_Aseta failid"
-
-#~ msgid "Select _All Files"
-#~ msgstr "Vali _kõik failid"
-
-#~ msgid "Cu_t File"
-#~ msgstr "_Lõika fail"
-
-#~ msgid "_Copy File"
-#~ msgstr "_Kopeeri fail"
-
-#~ msgid "Open"
-#~ msgstr "Ava"
-
-#~ msgid "Cut Folder"
-#~ msgstr "Lõika kataloog"
-
-#~ msgid "Copy Folder"
-#~ msgstr "Kopeeri kataloog"
-
-#~ msgid "Paste Files into Folder"
-#~ msgstr "Aseta failid kataloogi"
-
-#~ msgid "You cannot delete a volume icon."
-#~ msgstr "Kettaikooni pole võimalik kustutada"
-
-#~ msgid "Can't Delete Volume"
-#~ msgstr "Kettaseadet pole võimalik kustutada"
-
-#~ msgid "Open T_erminal"
-#~ msgstr "Ava _terminal"
-
-#~ msgid "Open a new GNOME terminal window"
-#~ msgstr "Avab uue GNOME'i terminali akna"
-
-#~ msgid "Create L_auncher"
-#~ msgstr "Loo _käivitaja"
-
-#~ msgid "_Desktop"
-#~ msgstr "_Töölaud"
-
-#~ msgid "_List"
-#~ msgstr "Nimekiri"
-
-#~ msgid "View as %s"
-#~ msgstr "Vaata kui %s"
-
-#~ msgid "The %s view encountered an error and can't continue."
-#~ msgstr "%s vaade tõi kaasa vea ja saa jätkata."
-
-#~ msgid "Applications"
-#~ msgstr "Rakendused"
-
-#~ msgid "Browse available software"
-#~ msgstr "Lehitse saadaolevat tarkvara"
-
-#~ msgid "Favorite applications"
-#~ msgstr "Lemmikrakendused"
-
-#~ msgid "Favorites"
-#~ msgstr "Lemmikud"
-
-#~ msgid "Crux-Teal"
-#~ msgstr "Crux-Teal"
-
-#~ msgid "Eazel"
-#~ msgstr "Eazel"
-
-#~ msgid "This is the default theme for Nautilus."
-#~ msgstr "See on Nautiluse vaikimisi teema."
-
-#~ msgid "A theme designed to fit well with the classic GNOME environment."
-#~ msgstr "Teemad on kujundatud sobimaks GNOME klassikalise keskkonnaga."
-
-#~ msgid "Sierra"
-#~ msgstr "Sierra"
-
-#~ msgid "Uses manila folders and gray-green backgrounds."
-#~ msgstr "Kasutab manila katalooge ja hallikasrohelist tagapõhja."
-
-#~ msgid "Tahoe"
-#~ msgstr "Tahoe"
-
-#~ msgid "This theme uses photo-realistic folders."
-#~ msgstr "See teema kasutab foto-realistlikku kataloogi"
-
-#~ msgid "Icons Viewer"
-#~ msgstr "Ikoonivaade"
-
-#~ msgid "List Viewer"
-#~ msgstr "Nimekirjavaade"
-
-#~ msgid "Nautilus Tree View"
-#~ msgstr "Nautiluse puuvaade"
-
-#~ msgid "Nautilus Tree side pane"
-#~ msgstr "Nautiluse puu küljepaan"
-
-#~ msgid "Search List"
-#~ msgstr "Otsingu nimekiri"
-
-#~ msgid "Allaire"
-#~ msgstr "Allaire"
-
-#~ msgid "Binary Freedom"
-#~ msgstr "Binary Freedom"
-
-#~ msgid "Borland"
-#~ msgstr "Borland"
-
-#~ msgid "CNET Computers.com"
-#~ msgstr "CNET Computers.com"
-
-#~ msgid "CNET Linux Center"
-#~ msgstr "CNET Linux Center"
-
-#~ msgid "CollabNet"
-#~ msgstr "CollabNet"
-
-#~ msgid "Compaq"
-#~ msgstr "Compaq"
-
-#~ msgid "Conectiva"
-#~ msgstr "Conectiva"
-
-#~ msgid "Covalent"
-#~ msgstr "Covalent"
-
-#~ msgid "Debian.org"
-#~ msgstr "Debian.org"
-
-#~ msgid "Dell"
-#~ msgstr "Dell"
-
-#~ msgid "Freshmeat.net"
-#~ msgstr "Freshmeat.net"
-
-#~ msgid "GNOME.org"
-#~ msgstr "GNOME.org"
-
-#~ msgid "GNU.org"
-#~ msgstr "GNU.org"
-
-#~ msgid "Hardware"
-#~ msgstr "Riistvara"
-
-#~ msgid "International"
-#~ msgstr "Rahvusvaheline"
-
-#~ msgid "Linux Documentation Project"
-#~ msgstr "Linux Documentation Project"
-
-#~ msgid "Linux One"
-#~ msgstr "Linux One"
-
-#~ msgid "Linux Online"
-#~ msgstr "Linux Online"
-
-#~ msgid "Linux Resources"
-#~ msgstr "Linux Resources"
-
-#~ msgid "Linux Weekly News"
-#~ msgstr "Linux Weekly News"
-
-#~ msgid "LinuxNewbie.org"
-#~ msgstr "LinuxNewbie.org"
-
-#~ msgid "LinuxOrbit.com"
-#~ msgstr "LinuxOrbit.com"
-
-#~ msgid "MandrakeSoft"
-#~ msgstr "MandrakeSoft"
-
-#~ msgid "Netraverse"
-#~ msgstr "Netraverse"
-
-#~ msgid "News and Media"
-#~ msgstr "Uudised ja meedia"
-
-#~ msgid "O'Reilly"
-#~ msgstr "O'Reilly"
-
-#~ msgid "OSDN"
-#~ msgstr "OSDN"
-
-#~ msgid "Open Source Asia"
-#~ msgstr "Open Source Asia"
-
-#~ msgid "OpenOffice"
-#~ msgstr "OpenOffice"
-
-#~ msgid "Penguin Computing"
-#~ msgstr "Penguin Computing"
-
-#~ msgid "Rackspace"
-#~ msgstr "Rackspace"
-
-#~ msgid "Red Hat"
-#~ msgstr "Red Hat"
-
-#~ msgid "Red Hat Network"
-#~ msgstr "Red Hat Network"
-
-#~ msgid "RedFlag Linux"
-#~ msgstr "RedFlag Linux"
-
-#~ msgid "SourceForge"
-#~ msgstr "SourceForge"
-
-#~ msgid "SuSE"
-#~ msgstr "SuSE"
-
-#~ msgid "Sun StarOffice"
-#~ msgstr "Sun StarOffice"
-
-#~ msgid "Sun Wah Linux"
-#~ msgstr "Sun Wah Linux"
-
-#~ msgid "Web Services"
-#~ msgstr "Veebiteenused"
-
-#~ msgid "Ximian"
-#~ msgstr "Ximian"
-
-#~ msgid "ZDNet Linux Hardware Database"
-#~ msgstr "ZDNet Linux Hardware Database"
-
-#~ msgid "ZDNet Linux Resource Center"
-#~ msgstr "ZDNet Linux Resource Center"
-
-#~ msgid "Zero-Knowledge"
-#~ msgstr "Zero-Knowledge"
-
-#~ msgid "Files thrown out:"
-#~ msgstr "Faile välja visatud:"
-
-#~ msgid "Files moved:"
-#~ msgstr "Faile liigutatud:"
-
-#~ msgid "Files linked:"
-#~ msgstr "Faile lingitud:"
-
-#~ msgid "Files copied:"
-#~ msgstr "Faile kopeeritud:"
