Updated Simplified Chinese translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-13  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Corected a critical typo of Simplified Chinese translation.
+
 2005-10-10  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
