--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1201,7 +1201,7 @@ msgstr "抱歉，无法保存自定义徽标名称。"
 #: ../libnautilus-private/nautilus-file-operations-progress.c:169
 #, c-format
 msgid "%s %ld of %ld %s"
-msgstr "第%2$ld个%1$s，共%3$ld个%4$s"
+msgstr "%s第%ld个，共%ld个%s"
 
 #: ../libnautilus-private/nautilus-file-operations-progress.c:448
 #, c-format
