Translation updated by Ivar Smolin.
2005-10-13  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-03 06:45+0000\n"
-"PO-Revision-Date: 2005-10-04 00:11+0300\n"
+"PO-Revision-Date: 2005-10-13 11:45+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -2551,7 +2551,7 @@ msgstr "Näita kettaseadmeid"
 
 #: ../nautilus-file-management-properties.desktop.in.h:1
 msgid "Change how files are managed"
-msgstr "Muuda failide haldamist"
+msgstr "Failihalduse eelistuste muutmine"
 
 #: ../nautilus-file-management-properties.desktop.in.h:2
 msgid "File Management"
@@ -3550,7 +3550,7 @@ msgstr "Vabandust, ei suuda \"%s\" ringi nimetada \"%s\"-ks."
 
 #: ../src/file-manager/fm-error-reporting.c:144
 msgid "The item could not be renamed."
-msgstr "Elementi pole võimalik ümber nimetada."
+msgstr "Kirjet pole võimalik ümber nimetada."
 
 #: ../src/file-manager/fm-error-reporting.c:145
 msgid "Renaming Error"
@@ -5163,7 +5163,7 @@ msgstr "_Tagasi"
 
 #: ../src/nautilus-navigation-window-menus.c:482
 msgid "Go to the previous visited location"
-msgstr "Liigub eelmisse külastatud kohta"
+msgstr "Liikumine eelmisse külastatud kohta"
 
 #: ../src/nautilus-navigation-window-menus.c:483
 msgid "Back history"
@@ -5175,7 +5175,7 @@ msgstr "_Edasi"
 
 #: ../src/nautilus-navigation-window-menus.c:499
 msgid "Go to the next visited location"
-msgstr "Liigub järgmisse külastatud kohta"
+msgstr "Liikumine järgmisse külastatud kohta"
 
 #: ../src/nautilus-navigation-window-menus.c:500
 msgid "Forward history"
@@ -5522,7 +5522,7 @@ msgstr "Palun vali teine rakendus ja proovi uuesti."
 
 #: ../src/nautilus-window-menus.c:177
 msgid "Go to the location specified by this bookmark"
-msgstr "Liigub järjehoidjaga määratud asukohta"
+msgstr "Liikumine järjehoidjaga määratud asukohta"
 
 #: ../src/nautilus-window-menus.c:409
 msgid ""
@@ -5726,7 +5726,7 @@ msgstr "_Kodukataloog"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:666
 msgid "Go to the home folder"
-msgstr "Liigub kodukataloogi"
+msgstr "Liikumine kodukataloogi"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:669
@@ -5746,7 +5746,7 @@ msgstr "_Mallid"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:674
 msgid "Go to the templates folder"
-msgstr "Liigub mallide kataloogi"
+msgstr "Liikumine mallide kataloogi"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:677
@@ -5756,7 +5756,7 @@ msgstr "_Prügikast"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:678
 msgid "Go to the trash folder"
-msgstr "Liigub prügikataloogi"
+msgstr "Liikumine prügikataloogi"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:681
