--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-13  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-10-13  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Corrected a typo of Simplified Chinese translation.
