--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-17  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c (fm_directory_view_class_init):
+	Remove ctrl-backspace delete keybinding. (#310546)
+
 2005-10-03  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-extension/nautilus-file-info.c:
