--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-18  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-extension/Makefile.am:
+	* libnautilus-private/Makefile.am:
+	Build fixes for cygwin.
+
 2005-10-17  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-bookmark.c:
