--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-18  Christian Neumair  <chris@gnome-de.org>
+
+	* data/browser.xml: Don't mark strings for translation we get from
+	gnome-icon-theme. Fixes #114919.
+
 2005-10-18  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-container.c: (key_press_event):
