Make metadata copying/moving asynchronous.
2005-10-18  Christian Neumair  <chris@gnome-de.org>

	* libnautilus-private/nautilus-metafile.c: Make metadata
	copying/moving asynchronous.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-10-18  Christian Neumair  <chris@gnome-de.org>
 
+	* libnautilus-private/nautilus-metafile.c: Make metadata
+	copying/moving asynchronous.
+
+2005-10-18  Christian Neumair  <chris@gnome-de.org>
+
 	* data/browser.xml: Don't mark strings for translation we get from
 	gnome-icon-theme. Fixes #114919.
 
