--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-18  Christian Neumair  <chris@gnome-de.org>
+
+	* src/nautilus-places-sidebar.c: (update_places):
+	* src/nautilus-window-bookmarks.c: (update_bookmarks):
+	Skip nonexistant bookmarks in menus/sidebar. Fixes #312507.
+
 2005-10-03  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
