Reuse Nautilus::URI from the one defined in libnautilus-private.
2005-10-19  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-shell-interface.idl:
	Reuse Nautilus::URI from the one defined in libnautilus-private.

	* libnautilus-private/Makefile.am:
	Link libnautilus-private statically.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-10-19  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-shell-interface.idl:
+	Reuse Nautilus::URI from the one defined in libnautilus-private.
+	
+	* libnautilus-private/Makefile.am:
+	Link libnautilus-private statically.
+
 2005-10-18  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-directory-view.c:
