--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-10-19  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/Makefile.am (INCLUDES):
+	Remove duplicate setting of libnautilus_private_la_LIBADD
+
+2005-10-19  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-shell-interface.idl:
 	Reuse Nautilus::URI from the one defined in libnautilus-private.
 	
