--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-10-19  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file):
+	Scroll into view correctly when renaming (#309964)
+	
+2005-10-19  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/Makefile.am (INCLUDES):
 	Remove duplicate setting of libnautilus_private_la_LIBADD
 
