--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-10-19  Christian Neumair  <chris@gnome-de.org>
 
+	* libnautilus-private/nautilus-bookmark.c:
+	(bookmark_file_changed_callback):
+	Don't update bookmarks when its target file is trashed. Fixes #162787.
+
+2005-10-19  Christian Neumair  <chris@gnome-de.org>
+
 	* libnautilus-private/nautilus-window-info.h:
 	* src/nautilus-window-manage-views.c:
 	(nautilus_window_open_location_full):
