--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-19  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-bookmark.c:
+	(bookmark_file_changed_callback):
+	Don't update bookmark when its target file is trashed. Fixes #162787.
+
 2005-10-18  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-directory-view.c:
