--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-10-19  Christian Neumair  <chris@gnome-de.org>
 
+	* libnautilus-private/nautilus-mime-actions.c:
+	(get_open_with_mime_applications), (application_compare_by_name),
+	(application_compare_by_id):
+	Fixes bug #310038.
+
+2005-10-19  Christian Neumair  <chris@gnome-de.org>
+
 	* libnautilus-private/nautilus-bookmark.c:
 	(bookmark_file_changed_callback):
 	Don't update bookmark when its target file is trashed. Fixes #162787.
