Clarify ChangeLog comment.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 	* libnautilus-private/nautilus-mime-actions.c:
 	(get_open_with_mime_applications), (application_compare_by_name),
 	(application_compare_by_id):
-	Fixes bug #310038.
+	Sort applications by name. Fixes bug #310038.
 
 2005-10-19  Christian Neumair  <chris@gnome-de.org>
 
