--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-10-21  Matthias Clasen  <mclasen@redhat.com>
+
+	* src/file-manager/fm-actions.h: 
+	* src/file-manager/nautilus-directory-view-ui.xml: 
+	* src/file-manager/fm-directory-view.c: Add a "Format"
+	menuitem to the context menu of Floppy in Computer,
+	which runs gfloppy.
+
 2005-10-20  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-program-choosing.c:
