Only show the "Format" menuitem if gfloppy is found

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-10-21  Matthias Clasen  <mclasen@redhat.com>
 
+	* src/file-manager/fm-directory-view.c: Only show
+	the "Format" item if gfloppy is around.
+
+2005-10-21  Matthias Clasen  <mclasen@redhat.com>
+
 	* src/file-manager/fm-actions.h: 
 	* src/file-manager/nautilus-directory-view-ui.xml: 
 	* src/file-manager/fm-directory-view.c: Add a "Format"
