--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-10-24  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-factory.c (nautilus_self_check_icon_factory):
+	Fix test, icon size was removed
+
+	* NEWS:
+	Update for release
+
 2005-10-21  Matthias Clasen  <mclasen@redhat.com>
 
 	* src/file-manager/fm-directory-view.c: Only show
