--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.13.1 are:
+* Adds volume/drive api for modules
+* Better sizes of stock icons in many places
+* GtkTreeView style typeahead
+* '/' opens location dialog/entry
+* middle click in browser mode opens new window
+* Handle cancellation of authentication better
+* Add format menu item for floppy drives
+
 Major changes in 2.12.1 are:
 * Pass all selected files to menu extensions, not only one per mimetype
 * Use much fewer file monitors
