--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-10-24  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.13.1 ===
+
+2005-10-24  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-factory.c (nautilus_self_check_icon_factory):
 	Fix test, icon size was removed
 
