--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-25  Marcel Telka  <marcel@telka.sk>
+
+	* sk.po: Updated Slovak translation.
+
 === nautilus 2.13.1 ===
 
 2005-10-23  Adam Weinberger  <adamw@gnome.org>
