Correctly sort the mime lists.
2005-10-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-mime-actions.c (get_open_with_mime_applications):
	Correctly sort the mime lists.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-26  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-mime-actions.c (get_open_with_mime_applications):
+	Correctly sort the mime lists.
+
 2005-10-24  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
