--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-26  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2005-10-25  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
