Updated "es" translation
2005-10-30  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated "es" translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-30  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish trasnalation.
+
 2005-10-21  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
